test/expected/declare_cri.out
declare r as const reference to int
        ^
9: error: reference is not supported in C
